# gst-tracer-stats-tools

./: .gitignore  README.md  gsttracer-negotiation-analyzer.py  meson.build
scripts/: gsttracer-statechange.py
src/: gstcapsnegoanalyzer.c  gstcapsnegoanalyzer.h  gststatechange.c  gststatechange.h  meson.build
