capsnegolib = shared_library('gstcapsnegotiationanalyzer', 'gstcapsnegoanalyzer.c',
                             include_directories : inc,
                             dependencies : gst_dep,
                             install : true)

statechangelib = shared_library('gststatechange', 'gststatechange.c',
                             include_directories : inc,
                             dependencies : gst_dep,
                             install : true)
